--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,17 +10,30 @@
     "err": true,
     "req": true,
     "res": true,
-    "next": true
+    "next": true,
+    "__API_URI__": false,
+    "__TITLE__": false,
+    "__DEBUG__": false
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "module": true,
+      "jsx": true
+    }
   },
   "rules": {
     "no-console": "off",
-    "indent": [ "error", 2 ],
+    "no-unused-vars": "off",
+    "indent": [ "error", 2, { "SwitchCase": 1 } ],
+    "react/prop-types": [0],
     "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "space-infix-ops": ["error", {"int32Hint": false}],
     "comma-dangle": ["error", "always-multiline"],
     "semi": [ "error", "always" ]
-  }
+  },
+  "plugins": ["react"]
 }
