--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "react": "^16.4.1",
+    "react-cowsay": "^0.1.0",
     "react-dom": "^16.4.1",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
